@@ -21,6 +21,10 @@ Changes between 1.X and 1.1.1
 
 - new "pytestconfig" funcarg allows access to test config object
 
+- streamlined plugin loading: order is now as documented in
+  customize.html: setuptools, ENV, commandline, conftest. 
+  also setuptools entry point names are turned to canonical namees ("pytest_*")
+
 - automatically skip tests that need 'capfd' but have no os.dup 
 
 - allow pytest_generate_tests to be defined in classes as well 
